// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en el <GifGrid > debe de mostrar items cuando se cargan imagenes 1`] = `
<Fragment>
  <h3>
    One Punch
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="CualquierCosa"
      url="https://cualquiercosa.com"
    />
    <GifGridItem
      id="123"
      key="123"
      title="CualquierCosa"
      url="https://cualquiercosa.com"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en el <GifGrid > debe de mostrarse correctamente 1`] = `
<Fragment>
  <h3>
    One Punch
  </h3>
  <p>
    Cargando...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
